# NN_from_scratch

./: .gitignore  CMakeLists.txt
scripts/: images.py
src/: CMakeLists.txt  CudaChecks.cuh  LayerClasses.cu  LayerClasses.cuh  LoadData.cpp  LoadData.h  Network.cu  Network.cuh  convLayer.cu  convLayer.cuh  cudaClasses.cuh  cudaKernels.cu  cudaKernels.cuh  main  main.c  main.cu  maxPool.cu  maxPool.cuh  mlp.cu  mlpLayer.cu  mlpLayer.cuh
tests/: CMakeLists.txt  cuda_kernel_tests.cu
